<resources>
    <string name="app_name">Popular Movies</string>
    <!-- Main activity -->
    <string name="view_mode_rating">Top rated</string>
    <string name="view_mode_popularity">Most popular</string>
    <string name="view_mode_favorite_movies">My favorite movies</string>
    <!-- Sort menu strings-->
    <string name="menu_sort_method">Sort Movies by...</string>
    <string name="menu_sort_method_popularity">Sort Movies by Popularity</string>
    <string name="menu_sort_method_rating">Sort Movies by Rating</string>
    <string name="menu_sort_method_favorite_movies">My Favorite Movies</string>
    <!-- Loading indicator -->
    <string name="loading_indicator_show">Showing loading indicator</string>
    <string name="loading_indicator_hide">Hiding loading indicator</string>
    <!-- MovieListCallback - mlc -->
    <string name="mlc_onresponse_successful">List of movies has been successfully retrieved</string>
    <string name="mlc_onresponse_failure">"List of movies could not be retrieved"</string>
    <string name="mlc_onfailure">Error while loading from TMDB API while trying to retrieve requested movie list</string>
    <!-- Debug strings -->
    <string name="debug_menu_sort_method_popularity">User selected sorting the movies by popularity</string>
    <string name="debug_menu_sort_method_rating">User selected sorting the movies by rating</string>
    <string name="debug_menu_sort_method_user_favorites">User selected to see the favorite movie list</string>
    <string name="debug_menu_sort_method_unknown">Sorting method selected is not yet implemented</string>

    <!-- Movie details activity -->
    <string name="movie_details_user_rating_label">User Rating</string>
    <string name="movie_details_user_rating_over_label">/10</string>
    <string name="movie_details_release_year_label">Release Year</string>
    <string name="movie_details_synopsis_label">Synopsis</string>
    <string name="movie_details_trailers_label">Trailers</string>
    <string name="movie_details_reviews_label">Reviews</string>
    <string name="movie_details_not_available">Movie details not available</string>

    <!-- Connection -->
    <string name="device_connected">Device is connected to Internet</string>
    <string name="device_not_connected">Device is not connected to the Internet</string>
    <string name="device_now_connected">Device is now connected to the Internet</string>

    <!-- Debug strings -->
    <string name="debug_movie_details_title">This is a very long movie title</string>
    <string name="debug_movie_details_release_year">1999</string>
    <string name="debug_movie_details_synopsis_text">A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground \"fight clubs\" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.</string>
    <string name="debug_movie_details_user_rating">8.3</string>
</resources>
