<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_sort_method"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_sort_method"
        app:showAsAction="ifRoom">
        <!-- Sort method submenu -->
        <menu>
            <item android:id="@+id/menu_sort_method_rating"
                  android:title="@string/menu_sort_method_rating" />
            <item android:id="@+id/menu_sort_method_popularity"
                  android:title="@string/menu_sort_method_popularity" />
            <item android:id="@+id/menu_sort_method_favorite_movies"
                  android:title="@string/menu_sort_method_favorite_movies" />
        </menu>
    </item>
</menu>