<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/movie_details_general_padding">

    <!-- Vertical line to divide the View in two parts vertically -->
    <android.support.constraint.Guideline
        android:id="@+id/movie_details_horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        />

    <!-- TextView with the original title of the movie -->
    <TextView
        android:id="@+id/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/movie_details_horizontal_middle"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/debug_movie_details_title"/>
    <!-- TextView with the release date -->
    <TextView
        android:id="@+id/movie_details_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/movie_details_horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_title"
        tools:text="@string/debug_movie_details_release_year"/>

    <!-- ImageView with the movie poster image thumbnail -->
    <ImageView
        android:id="@+id/movie_details_poster_thumbnail"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/movie_details_horizontal_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/fight_club_poster_thumbnail"/>
    <!-- TextView with the user rating -->
    <TextView
        android:id="@+id/movie_details_user_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/movie_details_user_rating_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/movie_details_horizontal_middle"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_release_date"/>

    <TextView
        android:id="@+id/movie_details_user_rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_details_user_rating_label"
        app:layout_constraintStart_toEndOf="@+id/movie_details_user_rating_label"
        tools:text="@string/debug_movie_details_user_rating"/>

</android.support.constraint.ConstraintLayout>